<resources>
    <string name="app_name">LifeHackOrMyth</string>
    <string name="life_hack_or_myth">Life Hack or Myth?</string>
    <string name="test_your_knowledge_of_real_life_hacks">Test your knowledge of real life hacks!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question">Question</string>
    <string name="hack_true">Hack (True)</string>
    <string name="myth_false">Myth (False)</string>
    <string name="next">Next</string>
    <string name="correct_answer">✅ Correct! That\'s a real time-saver!</string>
    <string name="wrong_answer">❌ Wrong! That\'s just an urban myth.</string>
    <string name="score">Score</string>
    <string name="result">Result</string>
    <string name="review_answers">Review Answers</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="score_text">Score: %1$d / %2$d</string>
    <string name="master">🔥 Master Hacker!</string>
    <string name="safe">⚠️ Stay Safe Online!</string>
    <string name="start">Start!</string>
    <string name="feedback_correct">%1$s\n%2$s</string>
    <string name="feedback_wrong">%1$s\n%2$s</string>
    <string name="selected_true">You have selected true.</string>
    <string name="selected_false">You have selected false.</string>
</resources>