<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/deep_burgundy"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mustard_yellow"
        android:layout_marginBottom="20dp"
        android:text="@string/score"
        android:textSize="24sp" />

    <!-- results button -->
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mustard_yellow"
        android:text="@string/result"
        android:textSize="20sp" />

    <!-- review button which you tap to go to the review screen where you can review statements -->
    <Button
        android:id="@+id/reviewButton"
        android:text="@string/review_answers"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/mustard_yellow"
        android:textColor="@color/deep_burgundy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>